[gd_scene load_steps=4 format=3 uid="uid://dypgb7fum44ul"]

[ext_resource type="Script" uid="uid://c8a3kw2j7vvnw" path="res://Scripts/level_menu.gd" id="1_4qic2"]
[ext_resource type="Texture2D" uid="uid://i7d16h22080c" path="res://Sprite/Pink.png" id="1_wvpgn"]
[ext_resource type="Texture2D" uid="uid://cxap23wujw130" path="res://Sprite/levels.png" id="2_4qic2"]

[node name="Level menu" type="Node"]
script = ExtResource("1_4qic2")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wvpgn")
expand_mode = 1
stretch_mode = 1

[node name="Text" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = 79.0
offset_right = 127.0
offset_bottom = 168.0
grow_horizontal = 2
texture = ExtResource("2_4qic2")

[node name="Buttons" type="Node" parent="."]

[node name="level 1" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 189.0
offset_top = -52.5
offset_right = 300.0
offset_bottom = 52.5
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "1"

[node name="level 2" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 346.0
offset_top = -52.5
offset_right = 457.0
offset_bottom = 52.5
grow_vertical = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "2"

[node name="level 3" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 509.0
offset_top = -52.5
offset_right = 620.0
offset_bottom = 52.5
grow_vertical = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "3"

[node name="level 4" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 674.0
offset_top = -52.5
offset_right = 785.0
offset_bottom = 52.5
grow_vertical = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "4"

[node name="level 5" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 841.0
offset_top = -52.5
offset_right = 952.0
offset_bottom = 52.5
grow_vertical = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "5"

[connection signal="pressed" from="Buttons/level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Buttons/level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Buttons/level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Buttons/level 4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Buttons/level 5" to="." method="_on_level_5_pressed"]
